# python-dectest

./: .gitignore  .travis.yml  NEWS  NEWS.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-and-lint.yml
dectest/: __init__.py  _decorators.py  _testcase.py  _types.py
dectest_test/: common.py  decorators.py  patch.py
test_dectest/: common.py  decorators.py  patch.py
