[tool.poetry]
name = "dectest"
version = "2.0.0"
description = "Improved TestCase class"
readme = "README.md"
authors = ["Sebastian Rittau <srittau@rittau.biz>"]
license = "MIT"
homepage = "https://github.com/srittau/python-dectest"
repository = "https://github.com/srittau/python-dectest"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
packages = [{ include = "dectest" }]
include = ["*/py.typed"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
asserts = ">=0.8.0,<0.13"
mypy = "~1.2.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
